css/styles.css
.page {
    width: 1480px;
    background-color: #f9f0db;
    /* margin: auto */
    padding: 20px;
    padding-top: 7px;
}

.pure-u-1-1 h1 {
	padding-left: 10px; /* Adjust this value as needed */
}

.pure-u-1-1 p {
	padding-left: 10px; /* Adjust this value as needed */
}

.vis-container {
    width: 100%;
	padding-top: 1px;
}

.vis-container2 {
    width: 100%;
	padding-top: 20px;
}

.description-right {
    padding-right: 5px;
}

.description-top-left1 {
    padding-right: 10px;
	padding-left: 10px;
	padding-top: 25x;
	
}

.aligned-paragraph{
	text-align: justify;
  	text-justify: inter-word;
}

.description-top-left2 {
	padding-left: 20px;
	padding-top: 25x;
}

.description-bottom-left {
    padding-right: 20px;
	padding-left: 10px;
	margin-top: 0;
}

.description-bottom-left {
    padding-right: 20px;
	padding-left: 15px;
	margin-top: 0;
	text-align: justify;
  	text-justify: inter-word;
}

.pure-g {
    margin-bottom: 40px;
}

#choropleth_map {
	top:10px;
	bottom: 10px; 
	left: 10px;
	right: 10px;
	/*height: 1000px;
	width: 800px;*/
}

#respiratory_prescriptions {
	top:10px;
	bottom: 10px; 
	left: 10px;
	right: 10px;
}

#ignitions {
	top:10px;
	bottom: 10px; 
	left: 10px;
	right: 10px;
}

#buildings {
	top:10px;
	bottom: 10px; 
	left: 10px;
	right: 10px;
}

